--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,16 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.20</version>
         </dependency>
-
+        <dependency>
+             <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.5</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
